--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       </div>
     </header>
     <!-- end header section -->
+
     <!-- slider section -->
     <section class=" slider_section position-relative">
       <div class="container">
@@ -221,19 +222,16 @@
   </div>
 
   <!-- offer section -->
-
   <section class="offer_section hero_next_section-margin layout_padding">
     <div class="container">
       <div class="heading_container">
-        <h2>
-          what we offer
-        </h2>
+        <h2>What We Offer</h2>
         <p>
-          It is a long established fact that a reader will be distracted by
-          the readable content of a page when looking at its layout. The point
-          of using Lorem
+          Thoughtfully designed programs and facilities to support your childs
+          early growth, safety, and happiness.
         </p>
       </div>
+
       <div class="row">
         <div class="col-md-6">
           <div class="content-box">
@@ -254,17 +252,16 @@
               </svg>
             </div>
             <div class="detail-box">
-              <h6>
-                safety first
-              </h6>
+              <h6>Safety First</h6>
               <p>
-                It is a long established fact that a reader will be distracted
-                by the readable content of a page when looking at its layout.
-                The point of using Lorem
+                A secure and well-monitored environment where your child feels protected,
+                comfortable, and cared for throughout the day.
               </p>
+
             </div>
           </div>
         </div>
+
         <div class="col-md-6">
           <div class="content-box">
             <div class="img-box">
@@ -326,17 +323,15 @@
 
             </div>
             <div class="detail-box">
-              <h6>
-                small class Size
-              </h6>
+              <h6>Small Class Sizes</h6>
               <p>
-                It is a long established fact that a reader will be distracted
-                by the readable content of a page when looking at its layout.
-                The point of using Lorem
+                Limited students per class to ensure personal attention, better interaction,
+                and meaningful learning experiences for every child.
               </p>
             </div>
           </div>
         </div>
+
         <div class="col-md-6">
           <div class="content-box">
             <div class="img-box">
@@ -425,17 +420,15 @@
               </svg>
             </div>
             <div class="detail-box">
-              <h6>
-                infant care
-              </h6>
+              <h6>Infant & Toddler Care</h6>
               <p>
-                It is a long established fact that a reader will be distracted
-                by the readable content of a page when looking at its layout.
-                The point of using Lorem
+                Gentle routines, nurturing care, and age-appropriate activities designed
+                especially for infants and toddlers.
               </p>
             </div>
           </div>
         </div>
+
         <div class="col-md-6">
           <div class="content-box">
             <div class="img-box">
@@ -532,17 +525,15 @@
               </svg>
             </div>
             <div class="detail-box">
-              <h6>
-                cretive lessons
-              </h6>
+              <h6>Creative Learning</h6>
               <p>
-                It is a long established fact that a reader will be distracted
-                by the readable content of a page when looking at its layout.
-                The point of using Lorem
+                Art, music, storytelling, and hands-on activities that encourage imagination,
+                curiosity, and early skill development.
               </p>
             </div>
           </div>
         </div>
+
         <div class="col-md-6">
           <div class="content-box">
             <div class="img-box">
@@ -558,17 +549,15 @@
               </svg>
             </div>
             <div class="detail-box">
-              <h6>
-                certified teachers
-              </h6>
+              <h6>Qualified Teachers</h6>
               <p>
-                It is a long established fact that a reader will be distracted
-                by the readable content of a page when looking at its layout.
-                The point of using Lorem
+                Experienced and trained educators who guide children with patience,
+                warmth, and a deep understanding of early childhood education.
               </p>
             </div>
           </div>
         </div>
+
         <div class="col-md-6">
           <div class="content-box">
             <div class="img-box">
@@ -582,21 +571,18 @@
               </svg>
             </div>
             <div class="detail-box">
-              <h6>
-                happy environment
-              </h6>
+              <h6>Happy Learning Environment</h6>
               <p>
-                It is a long established fact that a reader will be distracted
-                by the readable content of a page when looking at its layout.
-                The point of using Lorem
+                A joyful, child-friendly atmosphere that supports emotional growth,
+                confidence, and social development.
               </p>
             </div>
           </div>
         </div>
+        
       </div>
     </div>
   </section>
-
   <!-- end offer section -->
 
   <!-- about section -->
