overall home page

--- a/index.html
+++ b/index.html
@@ -218,7 +218,6 @@
 
       </div>
     </section>
-    <!-- end slider section -->
   </div>
 
   <!-- offer section -->
@@ -579,200 +578,95 @@
             </div>
           </div>
         </div>
-        
+
       </div>
     </div>
   </section>
-  <!-- end offer section -->
 
   <!-- about section -->
   <section class="about_section ">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="img-box">
-            <img src="images/about-img.jpg" alt="">
-          </div>
+      <div class="about-wrapper">
+        <div class="about-image">
+          <img src="images/classroom.png" alt="classroom image">
         </div>
-        <div class="col-md-5 col-lg-4">
-          <div class="detail-box">
-            <div class="heading_container">
-              <h2>
-                A Few words about us
-              </h2>
-            </div>
-            <p>
-              It is a long established fact that a reader will be distracted by the readable content of a page when
-              looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
-              of letters, as opposed to using 'Content here, content here', making it look like readable English. Many
-              desktop publishing packages and web
-            </p>
-            <div>
-              <a href="">
-                Read More
-              </a>
-            </div>
 
-          </div>
+        <div class="about-content">
+          <h2>About Mattern Roots Preschool</h2>
+
+          <p>
+            Mattern Roots Preschool is a warm and nurturing learning space designed
+            especially for young children. We focus on creating a safe, caring, and
+            joyful environment where every child feels valued and confident.
+          </p>
+
+          <p>
+            Our approach blends structured learning with play-based activities to
+            support emotional, social, and early academic development. With caring
+            teachers and personal attention, we help children take their first steps
+            into learning with happiness and curiosity.
+          </p>
+
+          <a href="about.html" class="about-btn">Know More</a>
         </div>
       </div>
     </div>
 
-
   </section>
-
-  <!-- end about section -->
 
   <!-- client section -->
-
-  <section class="client_section layout_padding">
-    <div class="container layout_padding2-top">
-      <div class="heading_container">
-        <h2>
-          Parent’s Feedback
-        </h2>
+  <section class="testimonial_section">
+    <div class="container">
+      <div class="heading_container text-center">
+        <h2>What Parents Say</h2>
+        <p>
+          Hear from parents who trust us with their childs early learning journey.
+        </p>
       </div>
-      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="client_container layout_padding">
-              <div class="img-box">
-                <img src="images/client.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h4>
-                  Rohali jonson
-                </h4>
-                <h6>
-                  customer
-                </h6>
-                <p>
-                  There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                  alteration in
-                  some form, by injected humour, or randomised words which don't look even slightly believable. If you
-                  are
-                  going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in
-                  the
-                  middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined
-                </p>
-                <img src="images/quote.png" alt="">
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="client_container layout_padding">
-              <div class="img-box">
-                <img src="images/client.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h4>
-                  Rohali jonson
-                </h4>
-                <h6>
-                  customer
-                </h6>
-                <p>
-                  There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                  alteration in
-                  some form, by injected humour, or randomised words which don't look even slightly believable. If you
-                  are
-                  going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in
-                  the
-                  middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined
-                </p>
-                <img src="images/quote.png" alt="">
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="client_container layout_padding">
-              <div class="img-box">
-                <img src="images/client.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h4>
-                  Rohali jonson
-                </h4>
-                <h6>
-                  customer
-                </h6>
-                <p>
-                  There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                  alteration in
-                  some form, by injected humour, or randomised words which don't look even slightly believable. If you
-                  are
-                  going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in
-                  the
-                  middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined
-                </p>
-                <img src="images/quote.png" alt="">
-              </div>
-            </div>
-          </div>
+
+      <div class="testimonial-grid">
+        <div class="testimonial-card">
+          <p class="quote">
+            We are very happy with the care and attention our child receives at
+            Mattern Roots Preschool. The teachers are warm, patient, and truly caring.
+          </p>
+          <span class="author">Parent of Nursery Student</span>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
 
+        <div class="testimonial-card">
+          <p class="quote">
+            A safe and welcoming environment where children learn happily.
+            We have seen great improvement in our childs confidence and communication.
+          </p>
+          <span class="author">Parent of Playgroup Student</span>
+        </div>
+
+        <div class="testimonial-card">
+          <p class="quote">
+            The school focuses not just on learning, but also on values and
+            emotional development. Highly recommended for young children.
+          </p>
+          <span class="author">Parent of Nursery Student</span>
+        </div>
+      </div>
     </div>
   </section>
 
-  <!-- end client section -->
 
   <!-- contact section -->
 
-  <section class="contact_section layout_padding">
-    <div class="container ">
-      <div class="heading_container ">
-        <h2 class="">
-          Request
-          <span>
-            A call Back
-          </span>
-
-        </h2>
-      </div>
-    </div>
+  <section class="cta_strip">
     <div class="container">
-      <div class="row">
-        <div class="col-md-6 ">
-          <form action="#">
-            <div>
-              <input type="text" placeholder="Name" />
-            </div>
-            <div>
-              <input type="email" placeholder="Email" />
-            </div>
-            <div>
-              <input type="text" placeholder="Pone Number" />
-            </div>
-            <div>
-              <input type="text" class="message-box" placeholder="Message" />
-            </div>
-            <div class="d-flex  mt-4 ">
-              <button>
-                SEND
-              </button>
-            </div>
-          </form>
-        </div>
-        <div class="col-md-6">
-          <!-- map section -->
-          <div class="map_section">
-            <div id="map" class="w-100 h-100"></div>
-          </div>
-
-          <!-- end map section -->
-        </div>
-      </div>
+      <h3>Admissions Open for Playgroup & Nursery</h3>
+      <p>
+        Call us to know more or visit the preschool for a personal tour.
+      </p>
+      <a href="tel:+91XXXXXXXXXX" class="cta-btn">Call Now</a>
+      <a href="contact.html" class="cta-btn-outline">Contact Us</a>
     </div>
   </section>
 
-  <!-- end contact section -->
+
 
   <!-- info section -->
   <section class="info_section layout_padding">
@@ -896,7 +790,8 @@
   <script>
     document.getElementById('year').textContent = new Date().getFullYear()
   </script>
-
+  <a href="https://wa.me/919309459772" class="whatsapp-float" target="_blank" aria-label="Chat on WhatsApp">
+    <img src="images/wp.svg" alt="WhatsApp">
+  </a>
 </body>
-
 </html>
