--- a/index.html
+++ b/index.html
@@ -662,10 +662,9 @@
         Call us to know more or visit the preschool for a personal tour.
       </p>
       <a href="tel:+91XXXXXXXXXX" class="cta-btn">Call Now</a>
-      <a href="contact.html" class="cta-btn-outline">Contact Us</a>
+      <a href="contact.html" class="cta-btn-outline">Email Us</a>
     </div>
   </section>
-
 
 
   <!-- info section -->
@@ -688,33 +687,10 @@
           </div>
         </div>
 
-        <!-- Contact us -->
-        <div class="col-md-3">
-          <div class="info_links">
-            <h5>Contact Us</h5>
-            <p class="pr-0 pr-md-4 pr-lg-5">
-              Mattern Roots Preschool<br /><br />
-              Kadamwadi, Kolhapur,<br />
-              +91 93094 59772<br />
-              matternroots@gmail.com
-            </p>
-          </div>
-        </div>
-
-        <!-- Our Approach -->
-        <div class="col-md-3">
-          <div class="info_insta">
-            <h5>Our Approach</h5>
-            <p class="pr-0 pr-md-4 pr-lg-5">
-              We believe in a balanced approach to early education that combines
-              structured learning with creative play, helping children develop
-              socially, emotionally, and academically.
-            </p>
-          </div>
-        </div>
+        
 
         <!-- For Parents -->
-        <div class="col-md-3">
+        <!-- <div class="col-md-3">
           <div class="pl-0 pl-lg-5 pl-md-4">
             <h5>For Parents</h5>
             <p>
@@ -724,7 +700,46 @@
               Age-Appropriate Learning Programs
             </p>
           </div>
+        </div> -->
+
+        <!-- Programs -->
+        <div class="col-md-3">
+          <div class="pl-0 pl-lg-5 pl-md-4">
+            <h5>Programs</h5>
+            <p>
+              Playgroup (2-3 Years)<br />
+              Nursery (3-4 Years)<br />
+              Kindergarten Prep<br />
+              Activity-Based Learning
+            </p>
+          </div>
         </div>
+
+        <!-- Our Approach -->
+        <div class="col-md-3">
+          <div class="info_insta">
+            <h5>Our Approach</h5>
+            <p>
+              We believe in a balanced approach to early education that combines
+              structured learning with creative play, helping children develop
+              socially, emotionally, and academically.
+            </p>
+          </div>
+        </div>
+
+        <!-- Contact us -->
+        <div class="col-md-3">
+          <div class="pl-0 pl-lg-5 pl-md-4 inf0_links">
+            <h5>Contact Us</h5>
+            <p>
+              Mattern Roots Preschool<br /><br />
+              Kadamwadi, Kolhapur,<br />
+              +91 93094 59772<br />
+              matternroots@gmail.com
+            </p>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
@@ -794,4 +809,5 @@
     <img src="images/wp.svg" alt="WhatsApp">
   </a>
 </body>
+
 </html>
