--- a/program.html
+++ b/program.html
@@ -32,6 +32,45 @@
 </head>
 
 <body class="sub_page">
+  <div class="hero_area">
+    <!-- header section strats -->
+    <header class="header_section">
+      <div class="container">
+        <nav class="navbar navbar-expand-lg custom_nav-container ">
+          <a class="navbar-brand" href="index.html">
+            <img src="images/logo.png" alt="" />
+            <span>
+              Mattern Roots Preschool
+            </span>
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
+              <ul class="navbar-nav  ">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">
+                    Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html"> About </a>
+                </li>
+                <li class="nav-item active ">
+                  <a class="nav-link" href="program.html"> Programs </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html"> Contact us</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </header>
+  </div>
   <section class="page-hero">
     <div class="container">
       <h1>Our Programs</h1>
@@ -49,9 +88,22 @@
           <div class="program-content">
             <h3>Playgroup</h3>
             <span class="age">(2 - 3 Years)</span>
+            <br>
             <p>
               A gentle introduction to school life through play, music, movement, and
-              social interaction in a safe and caring environment.
+              social interaction in a safe and caring environment.<br><br>
+
+              Our Playgroup program provides a warm and nurturing environment where young
+              children begin their learning journey through play.<br>
+
+              Activities include music, movement, storytelling, and hands-on exploration.<br>
+
+              The program focuses on developing social skills, emotional security, and
+              early motor development.<br>
+
+              Children learn to interact, share, and build confidence at their own pace.
+            </p>
+
             </p>
           </div>
         </div>
@@ -62,9 +114,22 @@
           <div class="program-content">
             <h3>Nursery</h3>
             <span class="age">(3 - 4 Years)</span>
+            <br>
             <p>
               Structured learning combined with creative play to develop early literacy,
-              numeracy, communication, and self-confidence.
+              numeracy, communication, and self-confidence.<br><br>
+
+              The Nursery program combines structured learning with creative play to support
+              early childhood development.<br>
+
+              Children are introduced to basic literacy and numeracy through fun, engaging
+              activities.<br>
+
+              Emphasis is placed on language development, creativity, and social interaction.<br>
+
+              This stage helps build independence, curiosity, and self-confidence.
+            </p>
+
             </p>
           </div>
         </div>
@@ -77,7 +142,17 @@
             <span class="age">(4 - 5 Years)</span>
             <p>
               Focused preparation for formal schooling with activity-based learning,
-              problem-solving skills, and emotional readiness.
+              problem-solving skills, and emotional readiness.<br><br>
+
+              Our Kindergarten Preparation program is designed to prepare children for a smooth
+              transition into formal schooling.<br>
+
+              The curriculum includes early reading, writing, and mathematical concepts through
+              activity-based learning.<br>
+
+              Children develop problem-solving abilities, critical thinking, and emotional readiness.<br>
+
+              The program also encourages independence, responsibility, and teamwork.
             </p>
           </div>
         </div>
