--- a/program.html
+++ b/program.html
@@ -84,7 +84,7 @@
 
         <!-- Playgroup -->
         <div class="program-card">
-          <img src="images/playgroup.png" alt="Playgroup Program">
+          <img src="images/pg.jpg" alt="Playgroup Program">
           <div class="program-content">
             <h3>Playgroup</h3>
             <span class="age">(2 - 3 Years)</span>
@@ -110,7 +110,7 @@
 
         <!-- Nursery -->
         <div class="program-card">
-          <img src="images/nursery.png" alt="Nursery Program">
+          <img src="images/nursery.jpg" alt="Nursery Program">
           <div class="program-content">
             <h3>Nursery</h3>
             <span class="age">(3 - 4 Years)</span>
@@ -162,7 +162,7 @@
   </section>
 
 
-  <!-- footer section -->
+  <!-- Admission open section -->
   <section class="program-cta">
     <div class="container">
       <h3>Admissions Open</h3>
@@ -171,7 +171,81 @@
     </div>
   </section>
 
+  <!-- info section -->
+  <section class="info_section layout_padding">
+    <div class="container">
+      <div class="row">
+        <!-- About us -->
+        <div class="col-md-3">
+          <div class="info_logo">
+            <div>
+              <a href="">
+                <img src="images/mpr_.png" alt="Mattern Roots Preschool" class="footer-logo" />
+
+              </a>
+            </div>
+            <p>
+              Mattern Roots Preschool is a nurturing space where young minds grow through
+              play, care, and curiosity. We focus on early learning that builds confidence,
+              creativity, and strong values.
+            </p>
+          </div>
+        </div>
+
+        <!-- Programs -->
+        <div class="col-md-3">
+          <div class="pl-0 pl-lg-5 pl-md-4">
+            <h5>Programs</h5>
+            <p>
+              Playgroup (2-3 Years)<br />
+              Nursery (3-4 Years)<br />
+              Kindergarten Prep<br />
+              Activity-Based Learning
+            </p>
+          </div>
+        </div>
+
+        <!-- Our Approach -->
+        <div class="col-md-3">
+          <div class="info_insta">
+            <h5>Our Approach</h5>
+            <p>
+              We believe in a balanced approach to early education that combines
+              structured learning with creative play, helping children develop
+              socially, emotionally, and academically.
+            </p>
+          </div>
+        </div>
+
+        <!-- Contact us -->
+        <div class="col-md-3">
+          <div class="pl-0 pl-lg-5 pl-md-4 inf0_links">
+            <h5>Contact Us</h5>
+            <p>
+              Mattern Roots Preschool<br /><br />
+              Kadamwadi, Kolhapur,<br />
+              +91 93094 59772<br />
+              matternroots@gmail.com
+            </p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
   <!-- footer section -->
+  <section class="container-fluid footer_section">
+    <p class="text-center mb-1">
+      © <span id="year"></span> Mattern Roots Preschool. All Rights Reserved.
+    </p>
+    <p class="text-center text-sm">
+      Managed by
+      <a href="https://nexspire.vercel.app/" target="_blank" rel="noopener noreferrer">
+        Nexspire Technologies
+      </a>
+    </p>
+  </section>
 
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
