--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="" />
+            <img src="images/mpr_.png" alt=""/>
             <span>
               Mattern Roots Preschool
             </span>
@@ -676,7 +676,8 @@
           <div class="info_logo">
             <div>
               <a href="">
-                <img src="images/logo.png" alt="Mattern Roots Preschool" />
+                <img src="images/mpr_.png" alt="Mattern Roots Preschool" class="footer-logo" />
+
               </a>
             </div>
             <p>
@@ -685,22 +686,7 @@
               creativity, and strong values.
             </p>
           </div>
-        </div>
-
-        
-
-        <!-- For Parents -->
-        <!-- <div class="col-md-3">
-          <div class="pl-0 pl-lg-5 pl-md-4">
-            <h5>For Parents</h5>
-            <p>
-              Admissions Open<br />
-              Safe & Secure Environment<br />
-              Experienced Teachers<br />
-              Age-Appropriate Learning Programs
-            </p>
-          </div>
-        </div> -->
+        </div>      
 
         <!-- Programs -->
         <div class="col-md-3">
@@ -744,8 +730,6 @@
     </div>
   </section>
 
-  <!-- end info_section -->
-
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p class="text-center mb-1">
@@ -758,8 +742,6 @@
       </a>
     </p>
   </section>
-
-  <!-- footer section -->
 
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
