about page + minor changes

--- a/about.html
+++ b/about.html
@@ -12,16 +12,18 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Brighton</title>
+  <title>Mattern Roots Preschool</title>
 
   <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
   <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Poppins:400,700|Roboto:400,700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Poppins:400,700|Roboto:400,700&display=swap"
+    rel="stylesheet" />
 
   <!-- Custom styles for this template -->
   <link href="css/style.css" rel="stylesheet" />
@@ -36,19 +38,20 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="" />
+            <img src="images/mpr_.png" alt="" />
             <span>
-              Brighton
+              Mattern Roots Preschool
             </span>
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
-                <li class="nav-item ">
+                <li class="nav-item">
                   <a class="nav-link" href="index.html">
                     Home <span class="sr-only">(current)</span></a>
                 </li>
@@ -68,140 +71,161 @@
       </div>
     </header>
     <!-- end header section -->
-
   </div>
 
-
-  <!-- about section -->
-  <section class="about_section ">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="img-box">
-            <img src="images/about-img.jpg" alt="">
-          </div>
-        </div>
-        <div class="col-md-5 col-lg-4">
-          <div class="detail-box">
-            <div class="heading_container">
-              <h2>
-                A Few words about us
-              </h2>
-            </div>
-            <p>
-              It is a long established fact that a reader will be distracted by the readable content of a page when
-              looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
-              of letters, as opposed to using 'Content here, content here', making it look like readable English. Many
-              desktop publishing packages and web
-            </p>
-            <div>
-              <a href="">
-                Read More
-              </a>
-            </div>
-
-          </div>
-        </div>
-      </div>
+  <!-- ABOUT PAGE -->
+  <section class="about-hero">
+    <div class="container">
+      <h1>About Mattern Roots Preschool</h1>
+      <p>
+        A nurturing space where children grow with care, confidence, and curiosity.
+      </p>
     </div>
-
-
   </section>
 
-  <!-- end about section -->
+  <section class="about-main">
+    <div class="about-overlay"></div>
+    <div class="container about-content-wrapper">
+
+      <!-- <div class="about-intro">
+        <p>
+          At <strong>Mattern Roots Preschool</strong>, we focus on early childhood development
+          through love, play, and purposeful learning - helping children grow confidently
+          in their most important years.
+        </p>
+      </div> -->
 
 
+      <!-- WHO WE ARE -->
+      <div class="about-block about-story">
+        <h2>Our Story</h2>
+        <p>
+          Mattern Roots Preschool was created with one simple belief - early childhood
+          should be joyful, safe, and meaningful.
+        </p>
+        <p>
+          Located in Kolhapur, we provide a nurturing space where children are encouraged
+          to explore, express, and grow at their own pace, supported by caring teachers
+          and thoughtful routines.
+        </p>
+      </div>
 
+
+      <!-- PHILOSOPHY -->
+      <div class="about-block philosophy">
+        <h2>How We Teach</h2>
+
+        <div class="philosophy-grid">
+          <div class="pill">Play-Based Learning</div>
+          <div class="pill">Emotional Development</div>
+          <div class="pill">Small Group Activities</div>
+          <div class="pill">Confidence & Independence</div>
+        </div>
+      </div>
+
+
+      <!-- WHY TRUST US -->
+      <div class="about-block highlight">
+        <h2>Why Parents Choose Us</h2>
+
+        <div class="trust-grid">
+          <div class="trust-item">Qualified & Caring Teachers</div>
+          <div class="trust-item">Limited Students per Class</div>
+          <div class="trust-item">Safe & Hygienic Environment</div>
+          <div class="trust-item">Personal Attention for Every Child</div>
+        </div>
+      </div>
+
+
+      <!-- CTA -->
+      <div class="about-cta">
+        <h3>
+          <h3>Admissions are open. Give your child the right start.</h3>
+        </h3>
+        <div class="cta-buttons">
+          <a href="tel:+919309459772" class="cta-primary">Call Now</a>
+          <a href="contact.html" class="cta-secondary">Contact Us</a>
+        </div>
+      </div>
+
+    </div>
+  </section>
 
   <!-- info section -->
   <section class="info_section layout_padding">
     <div class="container">
-      <div class="info_form">
-
-        <div class="row">
-          <div class="offset-lg-3 col-lg-3">
-            <h5 class="form_heading">
-              Newsletter
-            </h5>
-          </div>
-          <div class="col-md-6">
-            <form action="#">
-              <input type="text" placeholder="Enter Your email">
-              <button>
-                subscribe
-              </button>
-            </form>
-          </div>
-        </div>
-
-      </div>
-    </div>
-    <div class="container">
       <div class="row">
+        <!-- About us -->
         <div class="col-md-3">
           <div class="info_logo">
             <div>
               <a href="">
-                <img src="images/logo.png" alt="" />
-                <span>
-                  Brighton
-                </span>
+                <img src="images/mpr_.png" alt="Mattern Roots Preschool" class="footer-logo" />
+
               </a>
             </div>
             <p>
-              There are many variations of passages of Lorem Ipsum available,
-              but the majority have suffered alteration
+              Mattern Roots Preschool is a nurturing space where young minds grow through
+              play, care, and curiosity. We focus on early learning that builds confidence,
+              creativity, and strong values.
             </p>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="info_links ">
-            <h5>
-              Contact Us
-            </h5>
-            <p class="pr-0 pr-md-4 pr-lg-5">
-              Donec odio. Quisque volutpat mattis eros.Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
-              odio. Quisque volutpat mattis eros
-            </p>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="info_insta">
-            <h5>
-              INFORMATION
-            </h5>
-            <p class="pr-0 pr-md-4 pr-md-5">
-              Donec odio. Quisque volutpat mattis eros.Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
-              odio. Quisque volutpat mattis eros
-            </p>
-          </div>
-        </div>
+
+        <!-- Programs -->
         <div class="col-md-3">
           <div class="pl-0 pl-lg-5 pl-md-4">
-            <h5>
-              MY ACCOUNT
-
-            </h5>
+            <h5>Programs</h5>
             <p>
-              Donec odio. Quisque volutpat mattis eros.Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
-              odio. Quisque volutpat mattis eros
+              Playgroup (2-3 Years)<br />
+              Nursery (3-4 Years)<br />
+              Kindergarten Prep<br />
+              Activity-Based Learning
             </p>
-
           </div>
         </div>
+
+        <!-- Our Approach -->
+        <div class="col-md-3">
+          <div class="info_insta">
+            <h5>Our Approach</h5>
+            <p>
+              We believe in a balanced approach to early education that combines
+              structured learning with creative play, helping children develop
+              socially, emotionally, and academically.
+            </p>
+          </div>
+        </div>
+
+        <!-- Contact us -->
+        <div class="col-md-3">
+          <div class="pl-0 pl-lg-5 pl-md-4 inf0_links">
+            <h5>Contact Us</h5>
+            <p>
+              Mattern Roots Preschool<br /><br />
+              Kadamwadi, Kolhapur,<br />
+              +91 93094 59772<br />
+              matternroots@gmail.com
+            </p>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
 
-  <!-- end info_section -->
-
   <!-- footer section -->
   <section class="container-fluid footer_section">
-              <p class="text-center text-md-end text-xl-start"> 
-                All Rights Reserved
-              </p>
+    <p class="text-center mb-1">
+      © <span id="year"></span> Mattern Roots Preschool. All Rights Reserved.
+    </p>
+    <p class="text-center text-sm">
+      Managed by
+      <a href="https://nexspire.vercel.app/" target="_blank" rel="noopener noreferrer">
+        Nexspire Technologies
+      </a>
+    </p>
   </section>
-  <!-- footer section -->
 
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
