--- a/program.html
+++ b/program.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Brighton</title>
+  <title>Mattern Roots Preschool</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -71,7 +71,8 @@
       </div>
     </header>
   </div>
-  <section class="page-hero">
+
+  <section class="about-hero">
     <div class="container">
       <h1>Our Programs</h1>
       <p>Age-appropriate learning programs designed to nurture every childs growth.</p>
