--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/mpr_.png" alt=""/>
+            <img src="images/mpr_.png" alt="" />
             <span>
               Mattern Roots Preschool
             </span>
@@ -686,7 +686,7 @@
               creativity, and strong values.
             </p>
           </div>
-        </div>      
+        </div>
 
         <!-- Programs -->
         <div class="col-md-3">
@@ -701,15 +701,17 @@
           </div>
         </div>
 
-        <!-- Our Approach -->
+        <!-- Quick Links -->
         <div class="col-md-3">
-          <div class="info_insta">
-            <h5>Our Approach</h5>
-            <p>
-              We believe in a balanced approach to early education that combines
-              structured learning with creative play, helping children develop
-              socially, emotionally, and academically.
-            </p>
+          <div class="footer-links">
+            <h5>Quick Links</h5>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="program.html">Programs</a></li>
+              <li><a href="gallery.html">Gallery</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+            </ul>
           </div>
         </div>
 
