--- a/program.html
+++ b/program.html
@@ -206,15 +206,17 @@
           </div>
         </div>
 
-        <!-- Our Approach -->
+        <!-- Quick Links -->
         <div class="col-md-3">
-          <div class="info_insta">
-            <h5>Our Approach</h5>
-            <p>
-              We believe in a balanced approach to early education that combines
-              structured learning with creative play, helping children develop
-              socially, emotionally, and academically.
-            </p>
+          <div class="pl-0 pl-lg-5 pl-md-4 footer-links">
+            <h5>Quick Links</h5>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="program.html">Programs</a></li>
+              <li><a href="gallery.html">Gallery</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+            </ul>
           </div>
         </div>
 
